--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jquery": "^3.6.1",
+    "react-lottie": "^1.2.3",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
